# advanced-cpp-mocking-using-gmock

./: CMakeLists.txt  MovieDataFetcherRunner.cpp  moviedb-keys.txt
MovieDataDetcherTests/: ApiKey.h  FakeLogger.h  FakeLoggerFactory.h  FakeMovieMetaDataRepository.h  FakeRestApiClient.h  JsonHelperTests.cpp  MetaDataProcessorTests.cpp  StringHtmlEncoderTests.cpp  TheMovieDbDataFactoryTests.cpp  TheMovieDbRepositoryTests.cpp  main.cpp
MovieDataFetcher/: ErrorRepository.h  FileErrorRepository.cpp  FileErrorRepository.h  InvalidInputException.h  JsonHelper.cpp  JsonHelper.h  Logger.h  MetaDataProcessor.cpp  MetaDataProcessor.h  MovieData.cpp  MovieData.h  MovieDataFactory.h  MovieMetaDataRepository.h  MovieNotFoundException.h  RestApiClient.cpp  RestApiClient.h  SettableMovieData.h  StringHtmlEncoder.h  TheMovieDbDataFactory.cpp  TheMovieDbDataFactory.h  TheMovieDbRepository.cpp  TheMovieDbRepository.h
MovieDataFetcherCatch/: Fakes.h
